--- a/training-and-inference/Edge_YOLOv5_Model_Slot_Parking-Training.ipynb
+++ b/training-and-inference/Edge_YOLOv5_Model_Slot_Parking-Training.ipynb
@@ -22,7 +22,7 @@
         "!pip install roboflow\n",
         "\n",
         "from roboflow import Roboflow\n",
-        "rf = Roboflow(api_key=\"zMz6GWXdBf6Fg7sW8raw\")\n",
+        "rf = Roboflow(api_key=)\n",
         "project = rf.workspace(\"test-9vs0n\").project(\"parking-space-ipm1b-hompe\")\n",
         "version = project.version(1)\n",
         "dataset = version.download(\"yolov5\")"
